# plato

./: .gitignore  README.md  doordash_scraping.py  generate_playwright.py  pyproject.toml
src/plato/: __init__.py
